--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             </div>
             <div class="col-md-6 mt-4 pb-5">
                 <div class="card servicesText">
-                    <div class="card-body">
-                        <h4 class="card-title mt-2 pb-2">Projects</h4>
+                    <div class="card-body pb-5">
+                        <h4 class="card-title mt-2">Projects</h4>
                         <h6 class="pb-2">TRAVEL AND TOURISM</h6>
                         <p class="pb-2">It is a Website that provides comparison between different travel agencies and their packages. Hence, the customer can choose the better one according to their requirements.</p>
                         <h6>STRESS DETECTION IN IT PROFESSIONALS</h6>
